# httplib

./: CMakeLists.txt  README.md  build.sh
config/: config.json
doc/design/: 概要设计.doc  概要设计.md
src/Server/: CMakeLists.txt  FileManageRequest.cpp  FileManageRequest.h  FtpServer.cpp  FtpServer.h  HandlerFactory.cpp  HandlerFactory.h  LoginManager.cpp  LoginManager.h
src/base/: CMakeLists.txt  Config.cc  Config.cpp  Config.h  FileManager.cc  FileManager.cpp  FileManager.h  FileTransmission.h  FileTransmisson.cpp  Logger.cpp  Logger.h  Singleton.h
src/client/: CMakeLists.txt  clientwindow.cpp  clientwindow.h  clientwindow.ui  clipboardmanager.cpp  clipboardmanager.h  cloginmanager.cpp  cloginmanager.h  filetransmissionmanager.cpp  filetransmissionmanager.h  icon.qrc  remotefilemanager.cpp  remotefilemanager.h
src/server/: CMakeLists.txt  FileManageRequest.cpp  FileManageRequest.h  FileTransmission.cpp  FileTransmission.h  FtpServer.cpp  FtpServer.h  HandlerFactory.cpp  HandlerFactory.h  LoginManager.cpp  LoginManager.h  main.cpp
test/: CMakeLists.txt  ConfiTest.cc  ConfigTest.cpp  FileManageRequestTest.cpp  FileManagerTest.cpp  FileTransmissionTest.cpp  HandlerFactoryTest.cpp  LoggerTest.cpp  LoginManagerTest.cpp
